--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
     "prettier": "2.7.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.4.0",
     "react-redux": "8.0.4",
     "react-router-dom": "6.4.1",
-    "react-scripts": "4.0.0",
-    "tailwindcss": "3.1.8"
+    "react-scripts": "4.0.0"
   },
   "devDependencies": {
     "@babel/runtime": "7.13.8",
